Navbar has been set to sticky without breaking the box below. Media queries have been inserted to avoid wrapping of content when height is under 700px. Logo has been set to disappear below 500px. Insert hamburguer menu for vertical experience on mobile devices.

--- a/mainPageCss/mainpagestyles.css
+++ b/mainPageCss/mainpagestyles.css
@@ -96,7 +96,8 @@ html {
     width: 100vw;
     background-color: #fff;
     border-bottom: 2px solid silver;
-    /* position: fixed; */
+    top: 0;
+    position:sticky;
     z-index: 1;
 
 }
@@ -179,6 +180,29 @@ html {
 
 
 /* NAV BAR MEDIA QUERIES */
+
+@media (max-height: 700px){
+
+    .box-5 img {
+
+        width: 4vw;
+        padding-bottom: 1em;
+        
+    
+    }
+
+}
+
+@media (max-height: 550px){
+
+    .box-5 img {
+
+        display: none;        
+    
+    }
+
+}
+
 @media (max-width: 700px){
 
 
@@ -236,7 +260,7 @@ html {
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    height: 86vh;
+    height: 75vh;
     width: 100vw;
     /* border: 2px red solid; */
 
@@ -278,6 +302,18 @@ html {
     width: 50vw;
     margin-top: 1em;
     margin-right: 0.5em;
+
+}
+
+@media (max-height:700px){
+
+    .welcomeContainer {
+
+        flex-wrap: nowrap;
+
+    }
+
+
 
 }
 
